--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "axios": "^1.5.1",
+    "flowbite": "^2.0.0",
+    "flowbite-datepicker": "^1.2.2",
+    "flowbite-react": "^0.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "tailwind-datepicker-react": "^1.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
