--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.17.0",
     "tailwind-datepicker-react": "^1.4.3"
   },
